Sun Jan 14 23:37:30 EST 2001 Ben Collins <bcollins@debian.org>

  * include/dpkg-db.h: redeclare nfmalloc(), remove obstack definitions
  * lib/dbmodify.c (modstatdb_init): remove obstack init
  * lib/nfmalloc.c: redefine nfmalloc to be an inline function. It now checks
    to make sure db_obs is initliazed.
  * main/archives.c (tarobject): declare our own obstack, and use it instead
    (cu_fileslist) just call obstack_free
  * main/processarc.c: correct calling of cu_fileslist

Sun Jan 14 18:23:07 CST 2001 Adam Heath <doogie@debian.org>

  * main/dpkg.8: Document --command-fd.

Sun Jan 14 13:54:46 EST 2001 Ben Collins <bcollins@debian.org>

  * optlib/obstack.[ch]: New files for non GNU systems
  * optlib/Makefile.in (SOURCES): add obstack.c
  * lib/nfmalloc: remove nfmalloc()
  * include/dpkg-db.h: define obstack initializers, and define nfmalloc as a
    macro for obstack_alloc
  * lib/dbmodify.c (modstatdb_init): initialize obstack if it hasn't been already

Sun Jan 14 12:29:46 CST 2001 Adam Heath <doogie@debian.org>

  * lib/mlib.c, lib/fields.c, lib/parse.c, main/help.c, main/main.c,
    po/dpkg.pot: Fix -Wall messages.  Also, fix handling of user-defined
    fields in parsedb().

Sun Jan 14 02:46:14 CST 2001 Adam Heath <doogie@debian.org>

  * po/dpkg.pot: Bring up to date.

Sun Jan 14 02:37:05 CST 2001 Adam Heath <doogie@debian.org>

  * main/cleanup.c, main/help.c, main/processarc.c:  Removed duplicate
    code that was used to exec maintainer scripts, and moved it to a
    single function.  In the future, this single function could be used
    for tracking script execution.

Sun Jan 14 02:27:48 CST 2001 Adam Heath <doogie@debian.org>

  * main/main.h, main/main.c:  Change --{status,command}-pipe to
    --{status,command}-fd.

Sun Jan 14 02:19:18 CST 2001 Adam Heath <doogie@debian.org>

  * main/main.c, main/archives.c:  Add a --command-pipe.  This allows
    multiple commands to be passed to a single instance of dpkg, over