@@ -1,3 +1,9 @@
+Mon Jan 15 00:26:45 EST 2001 Ben Collins <bcollins@debian.org>
+
+  * lib/nfmalloc.c: use obstack_copy/obstack_copy0 for nfstrsave and
+    nfstrnsave respectively. Also, use an 8k chunk size for now. Should reduce
+    some overhead, and be faster.
+
 Sun Jan 14 23:37:30 EST 2001 Ben Collins <bcollins@debian.org>
 
   * include/dpkg-db.h: redeclare nfmalloc(), remove obstack definitions
